@@ -4,7 +4,6 @@ use strict;
 use warnings;
 
 use base 'HTML::Widgets::NavMenu::Object';
-use base 'Class::Accessor';
 
 use HTML::Widgets::NavMenu::EscapeHtml;
 
